Migrate from BinTray #1904
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>