@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 ###############################################################################
-# (C) Copyright IBM Corp. 2020
+# (C) Copyright IBM Corp. 2020, 2021
 #
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################################
@@ -73,38 +73,8 @@ function outputEnvironment {
 }
 
 ###############################################################################
-# Setup Maven Options 
-
-# Not all JVMs support - -XX:MaxPermSize=512m (don't set it)
-# -Xmx2G -Xms1G 
-if [ ! -f ~/.mavenrc ]
-then 
-    echo "MAVEN_OPTS='-Djava.awt.headless=true '" > ~/.mavenrc
-fi
-
-# Threads that are allowed to run
-# which are passed in with BUILD_THREAD
-# we don't want to embed this in maven_opts as certain goals are not thread safe.
-#
-# Examples: 
-#   1C (1Core)
-#   4  (4 Threads)
-THREAD_COUNT=
-if [ ! -z "${BUILD_THREAD}" ]
-then 
-    THREAD_COUNT="-T ${BUILD_THREAD}"
-fi
-
-###############################################################################
 # Setup Git - makes sure there is a gitignore which puts the log in this folder. 
 debugging "Current directory is $(pwd)"
-
-GIT_IGNORE='.gitignore'
-if [ ! -f ${GIT_IGNORE} ]
-then 
-    echo 'logs/' > ${GIT_IGNORE} 
-    echo '**/.cache' >> ${GIT_IGNORE} 
-fi
 
 ###############################################################################
 # wipe out existing bootstrap.env files 
@@ -156,24 +126,8 @@ set_build_type "-${FHIR_GIT_TAG}-" "${FHIR_GIT_BUILD_NUMBER}" "${FHIR_GIT_BRANCH
 
 echo "export BUILD_DISPLAY_NAME=\"${BUILD_ID}\"" >> bootstrap.env
 
-# Outputting JAVA_HOME
-debugging "JAVA_HOME is [${JAVA_HOME}]"
 
-# Check the BINTRAY_PASSWORD is set
-if [ ! -z "${BINTRAY_PASSWORD}" ]
-then 
-    info "BINTRAY PASSWORD is set!"
-else 
-    warn "BINTRAY PASSWORD is NOT set!"
-fi
 
-# Check the BINTRAY_PASSWORD is set
-if [ ! -z "${BINTRAY_USERNAME}" ]
-then 
-    info "BINTRAY USERNAME is set!"
-else 
-    warn "BINTRAY USERNAME is NOT set!"
-fi
 
 # Reset to Original Directory
 popd > /dev/null
